Update some GIOS images and allow hiding hero caption

--- a/src/content/ideas/2023/language-models/index.mdx
+++ b/src/content/ideas/2023/language-models/index.mdx
@@ -13,6 +13,7 @@ audience: 'All'
 image:
   path: "./language-model.png"
   alt: Language Model
+hideCaption: true
 ---
 
 import { Image } from "astro:assets";
