--- a/src/content/ideas/2025/gios-pr1/index.mdx
+++ b/src/content/ideas/2025/gios-pr1/index.mdx
@@ -13,6 +13,7 @@ media_subpath: "/ideas/gios-pr1/"
 image:
   path: "./pizza-server2.png"
   alt: 'Pizza Server'
+hideCaption: true
 ---
 
 import { Image } from "astro:assets";
@@ -26,7 +27,7 @@ import cLangImg from "../../../books/c-lang.jpg";
 import beejGuidesImg from "../../../books/beej-network.jpg";
 import linuxInterfaceImg from "../../../books/linux-interface.png";
 
-import clientServer from "./client-server.png";
+import clientServer from "./client-server2.png";
 import userKernelSocket from "./user-kernel-socket.png";
 import getfileProtocol from "./getfile-protocol.png";
 import bossWorker from "./boss-worker2.png";
