--- a/src/content/ideas/2025/gios-pr4/index.mdx
+++ b/src/content/ideas/2025/gios-pr4/index.mdx
@@ -12,6 +12,7 @@ media_subpath: "/ideas/gios-pr4/"
 image:
   path: "./distributed-pizza-server.jpeg"
   alt: 'Distributed Pizza Server'
+hideCaption: true
 ---
 import { Image } from "astro:assets";
 import BookCard from "../../../../components/BookCard.astro";
@@ -24,54 +25,33 @@ import cPlusPlusConcurrencyImg from "../../../books/c++concurrency-in-action.jpg
 import cPlusPlusTourImg from "../../../books/a-tour-of-c++.jpg";
 import ddiaImg from "../../../books/ddia.jpg";
 
+import dfsOverview from "./dfs-overview3.png";
+import protobufExample from "./protobuf-placeholder.png";
+import remoteAccess from "./remote-access.png";
+import copyDownload from "./copy-download.png";
+
 ## Introduction: The "Magic" of Google Drive
 
 The seamless sync of Google Drive feels like magic. I can edit a document on my laptop, and it instantly appears on my phone. This seamless synchronization feels effortless, but it's the result of a complex, carefully engineered **Distributed File System (DFS)**.
 
-A DFS is the backbone of modern cloud storage and collaboration. It allows multiple, geographically dispersed clients to access and modify a shared set of files as if they were stored on a single, local machine. For my final project in Georgia Tech's operating systems course, I was tasked with building one from the ground up in C++.
+A DFS is the backbone of modern cloud storage and collaboration. It allows multiple, geographically dispersed clients to access and modify a shared set of files as if they were stored on a single, local machine. For my final project in Georgia Tech's [CS 6200: Graduate Introduction to Operating Systems (GIOS)](https://omscs.gatech.edu/cs-6200-introduction-operating-systems), I was tasked with building one from the ground up in C++.
 
-In the first project I built a simple file system with a single client and 
-server. In the second project I extended it to add a proxy and cache server. 
-This project is the final step in the journey, building a distributed file 
-system with multiple clients and servers. This project was a fantastic 
+In the [first project](/ideas/2025/gios-pr1/), I built a simple file system with a single client and server. In the [second project](/ideas/2025/gios-pr3/), I extended it to add a proxy and cache server. This project is the final step in the journey, building a distributed file system with multiple clients and servers. This project was a fantastic 
 opportunity to tackle the challenges of distributed computing. This post 
 explores the key lessons from that journey, focusing on the three pillars of 
 any DFS: remote communication, data consistency, and synchronization.
 
+> [!note]
+> This post is meant to be a showcase of the work I did on the project and the concepts I learned from it. For a broader overview of all concepts covered in the course, please see the companion post: [GIOS: A Retrospective](/ideas/2025/gios-retro/).
+
 ## The Anatomy of a Distributed File System
 
-{/* <Figure
+<Figure
   caption="A simplified Distributed File System (DFS) architecture. Clients maintain local caches of files and use Remote Procedure Calls (RPCs) to communicate with a central server that manages the authoritative file storage."
-> */}
-```mermaid
-graph TD
-    subgraph "File Server"
-        direction LR
-        S[("gRPC Server")]
-        DB[(File Storage)]
-        S --- DB
-    end
-
-    subgraph "Client A"
-        direction LR
-        CA[Application] --> CACache["Local Directory<br/>(Cache)"]
-    end
-
-    subgraph "Client B"
-        direction LR
-        CB[Application] --> CBCache["Local Directory<br/>(Cache)"]
-    end
-
-    CACache -- "File & Metadata<br/>Operations (RPC)" --> S
-    S -- "File Contents &<br/>Cache Invalidations" --> CACache
-
-    CBCache -- "File & Metadata<br/>Operations (RPC)" --> S
-    S -- "File Contents &<br/>Cache Invalidations" --> CBCache
-
-    style S fill:#f9f,stroke:#333,stroke-width:2px
-    style DB fill:#ccf,stroke:#333,stroke-width:2px
-```
-{/* </Figure> */}
+  src={dfsOverview}
+  alt="A simplified Distributed File System (DFS) architecture. Clients maintain local caches of files and use Remote Procedure Calls (RPCs) to communicate with a central server that manages the authoritative file storage."
+  width={600}
+/>
 
 A DFS hides the complexity of the network behind the standard file system interface that applications already know how to use (`open`, `read`, `write`, `close`). But under the hood, it must make fundamental design decisions about how data is stored, accessed, and kept consistent.
 
@@ -89,10 +69,25 @@ In practice, many large-scale systems use a hybrid approach, partitioning the da
 
 {/* TODO: Add a figure here illustrating the difference between the client interaction models. */}
 
-At the heart of any DFS is a fundamental trade-off in how clients interact with remote files. The course notes outline two extremes:
+At the heart of any DFS is a fundamental trade-off in how clients interact with remote files. There are two extremes:
 
 - **The Upload/Download Model:** A client downloads the entire file, modifies it locally, and uploads the entire file back. This is fast for local edits but inefficient for small changes and gives the server no control over concurrent access.
+
+<Figure
+  caption="The Upload/Download Model. A client downloads the entire file, modifies it locally, and uploads the entire file back."
+  src={copyDownload}
+  alt="The Upload/Download Model. A client downloads the entire file, modifies it locally, and uploads the entire file back."
+  width={600}
+/>
+
 - **True Remote Access:** Every single file operation (`read` a byte, `write` a byte) is sent over the network to the server. This gives the server complete control, making consistency easy, but it's painfully slow and doesn't scale.
+
+<Figure
+  caption="The True Remote Access Model. Every single file operation (`read` a byte, `write` a byte) is sent over the network to the server."
+  src={remoteAccess}
+  alt="The True Remote Access Model. Every single file operation (`read` a byte, `write` a byte) is sent over the network to the server."
+  width={600}
+/>
 
 Neither extreme is practical. The necessary compromise is **caching**. Clients cache parts of files locally to speed up access. This is the best of both worlds: it reduces network latency for many operations and lessens the load on the server. However, it introduces the central challenge of DFS design: if a client has a cached copy, how do we ensure it's kept up-to-date when someone else changes the file?
 
@@ -112,21 +107,37 @@ At its core, an RPC interaction is a client-server exchange designed to look lik
 2.  **Marshalling and Unmarshalling:** The process of packaging the function arguments into a format suitable for network transmission (like a byte stream) is called **marshalling**. The reverse process on the server side—unpacking the byte stream back into arguments—is called **unmarshalling**. The same process happens in reverse for the function's return value.
 3.  **Interface Definition Language (IDL):** The client and server need to agree on the set of available functions and the exact structure of their arguments and return values. This "service contract" is formally defined in a language-agnostic **Interface Definition Language (IDL)**. The IDL file is used by the RPC framework to automatically generate the client and server stubs.
 
+{/* <Figure
+  caption="The Remote Procedure Call (RPC) flow. The client call is marshalled, sent over the network, and unmarshalled by the server stub, which then invokes the actual service implementation. The process is reversed for the response."
+> */}
+```mermaid
+sequenceDiagram
+    participant C as Client App
+    participant CS as Client Stub (Generated)
+    participant G as gRPC Framework
+    participant SS as Server Stub (Generated)
+    participant S as Service Impl
+
+    C->>+CS: SayHello("world")
+    CS->>+G: Marshal Request<br/>(Serialize Protobuf)
+    G->>G: Send over Network (HTTP/2)
+    G->>+SS: Receive Data
+    SS->>SS: Unmarshal Request<br/>(Deserialize Protobuf)
+    SS->>+S: SayHello(request)
+    S-->>-SS: return "Hello world"
+    SS->>+G: Marshal Response
+    G-->>G: Send over Network
+    G-->>-CS: Receive Response
+    CS-->>CS: Unmarshal Response
+    CS-->>-C: return "Hello world"
+```
+{/* </Figure> */}
+
 For this project, I used **gRPC**, a modern, high-performance RPC framework developed by Google, paired with **Protocol Buffers (protobufs)** for defining the service and structuring the data.
 
 ### Defining the Service with Protocol Buffers
 
 Before you can make a call, you have to define the "service contract"—the set of available functions and the structure of the data they exchange. With gRPC, you do this in a simple `.proto` file, which is a specific type of IDL. This language-agnostic definition is the single source of truth for the entire system.
-
-As Martin Kleppmann explains in his analysis of serialization formats, the way data is encoded from the schema has huge implications for performance and flexibility. Unlike text-based formats like JSON, Protocol Buffers uses the schema to create a compact binary representation. Each field defined in the `.proto` file is assigned a unique tag number. When marshalling data, Protobuf encodes the record as a simple concatenation of its fields, where each field is prefixed with its tag number and type. This means the field names (`userName`, `favouriteNumber`, etc.) are not stored in the encoded data, saving a significant amount of space [[2]](https://martin.kleppmann.com/2012/12/05/schema-evolution-in-avro-protocol-buffers-thrift.html).
-
-This tag-based approach is also what enables powerful **schema evolution**. If a parser encounters a tag it doesn't recognize (perhaps because it's from a newer version of the schema), it can use the type information embedded with the tag to determine how many bytes to skip, allowing it to parse the rest of the record. This allows different components of a large system to be updated independently without breaking compatibility [[2]](https://martin.kleppmann.com/2012/12/05/schema-evolution-in-avro-protocol-buffers-thrift.html).
-
-For this project, the `.proto` file defined the core API of the Distributed File System. It specified:
-- RPCs for essential file operations: `Fetch`, `Store`, and `Delete`.
-- RPCs to `List` files with their metadata and `GetAttributes` for a specific file (such as size and modification times).
-- The structure of request and response messages, defining what data is needed for each call (e.g., a filename) and what data is returned (e.g., file content and a timestamp).
-- A long-lived, server-to-client streaming RPC for the server to proactively send cache invalidation notifications to clients.
 
 In accordance with academic integrity policies, I have not included the exact `.proto` file from the project. However, to illustrate the syntax, here is a generic "Greeter" service, a common example used in gRPC documentation:
 
@@ -152,6 +163,22 @@ message HelloReply {
 }
 ```
 From a file like this, the `protoc` compiler can generate all the necessary client and server code in C++, Python, Go, or a dozen other languages.
+
+As Martin Kleppmann explains in his analysis of serialization formats, the way data is encoded from the schema has huge implications for performance and flexibility. Unlike text-based formats like JSON, Protocol Buffers uses the schema to create a compact binary representation. Each field defined in the `.proto` file is assigned a unique tag number. When marshalling data, Protobuf encodes the record as a simple concatenation of its fields, where each field is prefixed with its tag number and type. This means the field names (`userName`, `favouriteNumber`, etc.) are not stored in the encoded data, saving a significant amount of space [[2]](https://martin.kleppmann.com/2012/12/05/schema-evolution-in-avro-protocol-buffers-thrift.html).
+
+<Figure
+  caption="A simple example of a Protocol Buffers message. The `name` field is encoded as a string with tag number 1, and the `age` field is encoded as an integer with tag number 2."
+  src={protobufExample}
+  alt="A simple example of a Protocol Buffers message. The `name` field is encoded as a string with tag number 1, and the `age` field is encoded as an integer with tag number 2."
+/>
+
+This tag-based approach is also what enables powerful **schema evolution**. If a parser encounters a tag it doesn't recognize (perhaps because it's from a newer version of the schema), it can use the type information embedded with the tag to determine how many bytes to skip, allowing it to parse the rest of the record. This allows different components of a large system to be updated independently without breaking compatibility [[2]](https://martin.kleppmann.com/2012/12/05/schema-evolution-in-avro-protocol-buffers-thrift.html).
+
+For this project, the `.proto` file defined the core API of the Distributed File System. It specified:
+- RPCs for essential file operations: `Fetch`, `Store`, and `Delete`.
+- RPCs to `List` files with their metadata and `GetAttributes` for a specific file (such as size and modification times).
+- The structure of request and response messages, defining what data is needed for each call (e.g., a filename) and what data is returned (e.g., file content and a timestamp).
+- A long-lived, server-to-client streaming RPC for the server to proactively send cache invalidation notifications to clients.
 
 ### Making the Call in C++
 
@@ -216,49 +243,28 @@ int main() {
 ```
 All the complexity of serialization, network sockets, and HTTP/2 framing is hidden behind that single `stub_->SayHello()` call. This is the power of a modern RPC framework.
 
-{/* <Figure
-  caption="The Remote Procedure Call (RPC) flow. The client call is marshalled, sent over the network, and unmarshalled by the server stub, which then invokes the actual service implementation. The process is reversed for the response."
-> */}
-```mermaid
-sequenceDiagram
-    participant C as Client App
-    participant CS as Client Stub (Generated)
-    participant G as gRPC Framework
-    participant SS as Server Stub (Generated)
-    participant S as Service Impl
-
-    C->>+CS: SayHello("world")
-    CS->>+G: Marshal Request<br/>(Serialize Protobuf)
-    G->>G: Send over Network (HTTP/2)
-    G->>+SS: Receive Data
-    SS->>SS: Unmarshal Request<br/>(Deserialize Protobuf)
-    SS->>+S: SayHello(request)
-    S-->>-SS: return "Hello world"
-    SS->>+G: Marshal Response
-    G-->>G: Send over Network
-    G-->>-CS: Receive Response
-    CS-->>CS: Unmarshal Response
-    CS-->>-C: return "Hello world"
-```
-{/* </Figure> */}
-
 ## The Consistency Challenge: From Strong to Eventual
 
 One of the hardest problems in any distributed system is **consistency**. If Client A and Client B both have a copy of `document.txt`, and Client A edits it, how and when does Client B see that change? There's a spectrum of possible guarantees, or **consistency models**, each with different trade-offs between correctness and performance.
 
-*   **Strong Consistency:** This is the most intuitive model. Any read will always return the result of the most recently completed write. It's as if there's only one single copy of the data in the entire system. This is the easiest to reason about, but it's often the slowest, as it may require complex locking or coordination across the network for every single operation.
+| Consistency Model   | Guarantee                                                | Pro (Performance / Availability) | Con (Simplicity / Correctness) |
+| ------------------- | -------------------------------------------------------- | -------------------------------- | ------------------------------ |
+| **Strong**          | Reads always see the most recently completed write.      | Slowest / Lowest                 | Easiest to reason about        |
+| **Sequential**      | Operations appear in some global order.                  | Medium                           | Complex to implement           |
+| **Eventual**        | Replicas will eventually converge if writes stop.        | Fastest / Highest                | Hardest to reason about        |
+| **This Project**    | Writes are serialized; reads may be temporarily stale.   | High (for reads)                 | Balanced trade-off             |
 
-*   **Sequential Consistency:** A slightly relaxed model where all operations appear to have executed in *some* total global order, and that order is consistent with the order of operations on each individual client. This is still a very strong guarantee.
+*   **Strong Consistency:** This is the most intuitive model, behaving like a single machine. Any read will always return the result of the most recently completed write. Think of a bank transaction: you expect your balance to be updated everywhere, immediately. This is the easiest to reason about, but it's often the slowest, as it may require complex locking or coordination across the network for every single operation, sacrificing availability if the network has problems.
 
-*   **Eventual Consistency:** This is the weakest model. It guarantees that if no new updates are made, all replicas will *eventually* converge to the same value. It doesn't say *when* this will happen. This model offers the best performance and availability, as clients can continue to read and write from local replicas without waiting for network communication. Systems like DNS and many NoSQL databases use this model.
+*   **Eventual Consistency:** This is the weakest model, prioritizing availability and speed. It guarantees that if no new updates are made, all replicas will *eventually* converge to the same value, but it doesn't say *when*. Think of DNS or updating a social media profile; your new profile picture will show up for everyone, but it might take a few seconds or minutes to propagate. This model offers the best performance, as clients can continue to read and write from local replicas without waiting, but it means developers have to handle the possibility of working with stale data.
 
-This project implemented a **weak consistency model** inspired by the **Andrew File System (AFS)**, which strikes a pragmatic balance. In this model:
+This project implemented a **weak consistency model** inspired by the **Andrew File System (AFS)**, which strikes a pragmatic balance between the two extremes. In this model:
 - Clients aggressively **cache** copies of files locally for fast access.
-- When a client wants to *modify* a file, it must acquire a **write lock** from the server. This ensures only one client can write to a file at any given time, preventing "lost update" anomalies.
-- The client determines if a file has changed by comparing its local version's CRC32 checksum and last-modified timestamp against the server's version.
-- When a client closes a modified file, it uploads the new version to the server. The server then sends out **cache invalidation** callbacks to all other clients that have a copy of that file, telling them their version is now stale.
+- When a client wants to *modify* a file, it must acquire a **write lock** from the server. This ensures only one client can write to a file at any given time, preventing the "lost update" anomaly where concurrent edits could overwrite each other.
+- The client determines if its cached file is stale by comparing the file's metadata (like a timestamp or checksum) against the server's version before using it.
+- When a client closes a modified file, it uploads the new version to the server. The server then sends out **cache invalidation** callbacks to all other clients that have a copy of that file, telling them their version is now stale and must be re-fetched on the next access.
 
-This "write-on-close" strategy provides good performance for reads, as they are served from the local cache, while still providing reasonable guarantees about seeing up-to-date data. This "write-on-close" strategy provided the ideal trade-off for this project: it made reads snappy by serving them from the local cache, while still providing strong enough guarantees to prevent lost updates and keep data reasonably fresh across all clients.
+This "write-on-close" strategy provides the ideal trade-off for this project: it makes reads snappy by serving them from the local cache, while still providing strong enough guarantees to prevent data corruption and keep data reasonably fresh across all clients. It accepts that a client might read slightly stale data in the short window between another client's write and the invalidation message, a perfectly acceptable compromise for this type of application.
 
 {/* <Figure
     caption="Weak consistency with cache invalidation. A write from Client A updates the server, which then asynchronously tells Client B that its cached copy is stale. Client B will fetch the new version on its next read."
